# lidar_calibration

./: CMakeLists.txt  package.xml  readme.md
data/: board.pcd  lidar.txt  neh.txt
include/lidar_calibration/: calibration.h
launch/: two_lidars.launch
rviz/: high_lidar.rviz  low_lidar.rviz  test.rviz  two_lidars.rviz
src/: calibration.cpp  ransac_ground.cpp  select_pointcloud.cpp
